--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -1,5 +1,8 @@
 name: Test and deploy to development
-on: push
+on:
+  push:
+    branches-ignore:
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
